--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 	<meta name="description" content="Play cards.">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" href="/css/screen.css" />
-	<script src="/js/ender.min.js"></script>
-	<script src="/js/noisything.js"></script>
-	<script src="/js/deckmate.js"></script>
-	<script src="/js/app.js"></script>
+	<script data-main="/js/main" src="/js/require-jquery.js"></script>
 </head>
 <body>
 
@@ -21,7 +18,7 @@
 	<div id="deck"></div>
 </div>
 
-<div id="btmpanel" class="bar">
-</div>
+<div id="btmpanel" class="bar"></div>
+
 </body>
 </html>
